// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render image 1`] = `
<transition-stub class="van-image-preview__overlay"
                 role="button"
                 tabindex="0"
>
  <div class="van-overlay">
  </div>
</transition-stub>
<transition-stub>
  <div role="dialog"
       tabindex="0"
       class="van-popup van-popup--center van-image-preview"
  >
    <div class="van-swipe van-image-preview__swipe">
      <div style="transition-duration: 300ms; transform: translateX(0px);"
           class="van-swipe__track"
      >
        <div class="van-swipe-item van-image-preview__swipe-item">
        </div>
        <div class="van-swipe-item van-image-preview__swipe-item">
        </div>
        <div class="van-swipe-item van-image-preview__swipe-item">
        </div>
      </div>
    </div>
    <div class="van-image-preview__index">
      1 / 3
    </div>
  </div>
</transition-stub>
`;

exports[`should change close icon position when using close-icon-position prop 1`] = `
<i class="van-badge__wrapper van-icon van-icon-clear van-image-preview__close-icon van-image-preview__close-icon--top-left van-haptics-feedback"
   role="button"
>
</i>
`;

exports[`should change close icon when using close-icon prop 1`] = `
<i class="van-badge__wrapper van-icon van-icon-success van-image-preview__close-icon van-image-preview__close-icon--top-right van-haptics-feedback"
   role="button"
>
</i>
`;

exports[`should render cover slot correctly 1`] = `
<transition-stub class="van-image-preview__overlay"
                 role="button"
                 tabindex="0"
>
  <div class="van-overlay">
  </div>
</transition-stub>
<transition-stub>
  <div role="dialog"
       tabindex="0"
       class="van-popup van-popup--center van-image-preview"
  >
    <div class="van-swipe van-image-preview__swipe">
      <div style="transition-duration: 300ms; transform: translateX(0px);"
           class="van-swipe__track"
      >
      </div>
    </div>
    <div class="van-image-preview__index">
      1 / 0
    </div>
    <div class="van-image-preview__cover">
      Custom Cover
    </div>
  </div>
</transition-stub>
`;

exports[`should render index slot correctly 1`] = `
<div class="van-image-preview__index">
  Custom Index: 0
</div>
`;

exports[`should swipe to current index after calling the swipeTo method 1`] = `
<div class="van-image-preview__index">
  3 / 3
</div>
`;

exports[`zoom in and drag image to move 1`] = `
<div class="van-image van-image-preview__image"
     style="transition-duration: .3s;"
>
  <img src="https://fastly.jsdelivr.net/npm/@vant/assets/apple-1.jpeg"
       class="van-image__img"
       style="object-fit: contain;"
  >
  <div class="van-image__loading">
    <div class="van-loading van-loading--spinner"
         aria-live="polite"
         aria-busy="true"
    >
      <span class="van-loading__spinner van-loading__spinner--spinner">
        <i class="van-loading__line van-loading__line--1">
        </i>
        <i class="van-loading__line van-loading__line--2">
        </i>
        <i class="van-loading__line van-loading__line--3">
        </i>
        <i class="van-loading__line van-loading__line--4">
        </i>
        <i class="van-loading__line van-loading__line--5">
        </i>
        <i class="van-loading__line van-loading__line--6">
        </i>
        <i class="van-loading__line van-loading__line--7">
        </i>
        <i class="van-loading__line van-loading__line--8">
        </i>
        <i class="van-loading__line van-loading__line--9">
        </i>
        <i class="van-loading__line van-loading__line--10">
        </i>
        <i class="van-loading__line van-loading__line--11">
        </i>
        <i class="van-loading__line van-loading__line--12">
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 2`] = `
<div class="van-image van-image-preview__image"
     style="transition-duration: .3s;"
>
  <img src="https://fastly.jsdelivr.net/npm/@vant/assets/apple-1.jpeg"
       class="van-image__img"
       style="object-fit: contain;"
  >
  <div class="van-image__loading">
    <div class="van-loading van-loading--spinner"
         aria-live="polite"
         aria-busy="true"
    >
      <span class="van-loading__spinner van-loading__spinner--spinner">
        <i class="van-loading__line van-loading__line--1">
        </i>
        <i class="van-loading__line van-loading__line--2">
        </i>
        <i class="van-loading__line van-loading__line--3">
        </i>
        <i class="van-loading__line van-loading__line--4">
        </i>
        <i class="van-loading__line van-loading__line--5">
        </i>
        <i class="van-loading__line van-loading__line--6">
        </i>
        <i class="van-loading__line van-loading__line--7">
        </i>
        <i class="van-loading__line van-loading__line--8">
        </i>
        <i class="van-loading__line van-loading__line--9">
        </i>
        <i class="van-loading__line van-loading__line--10">
        </i>
        <i class="van-loading__line van-loading__line--11">
        </i>
        <i class="van-loading__line van-loading__line--12">
        </i>
      </span>
    </div>
  </div>
</div>
`;
